--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.12",
+    "gsap": "^3.13.0",
+    "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.2"
+    "react-icons": "^5.5.0",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
